common-applications/test-environment/openeuler-ccs/console/console-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: console-service
  namespace: openeuler-ccs
spec:
  ports:
  - name: http-port
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: console
  type: ClusterIP
