common-applications/test-environment/openeuler-ccs/console/console-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: console-ingress
  namespace: openeuler-ccs
spec:
  rules:
  - host: openeuler-ccs-console.test.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: console-service
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - openeuler-ccs-console.test.osinfra.cn
    secretName: console-tls
